--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -1,32 +1,34 @@
-on:
+'on':
   push:
     branches:
-    - main
-  pull_request:
+      - 26.1.x
+  pull_request: null
 name: ci
 jobs:
   dashboard:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
-      with:
-        distribution: zulu
-        java-version: 8
-    - run: java -version
-    - run: .kokoro/dashboard.sh
-      env:
-        JOB_TYPE: dashboard-units-check
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: zulu
+          java-version: 8
+      - run: java -version
+      - run: .kokoro/dashboard.sh
+        env:
+          JOB_TYPE: dashboard-units-check
   shared-dependencies-convergence:
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'googleapis' && github.head_ref == 'release-please--branches--main'
+    if: >-
+      github.repository_owner == 'googleapis' && github.head_ref ==
+      'release-please--branches--main'
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
-      with:
-        distribution: zulu
-        java-version: 8
-    - run: java -version
-    - run: .kokoro/dashboard.sh
-      env:
-        JOB_TYPE: dependency-convergence-check
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: zulu
+          java-version: 8
+      - run: java -version
+      - run: .kokoro/dashboard.sh
+        env:
+          JOB_TYPE: dependency-convergence-check
