--- a/libraries-release-data/pom.xml
+++ b/libraries-release-data/pom.xml
@@ -19,4 +19,9 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
 </project>
