--- a/libraries-release-data/pom.xml
+++ b/libraries-release-data/pom.xml
@@ -3,7 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <artifactId>java-cloud-bom-root</artifactId>
+        <groupId>com.google.cloud</groupId>
+        <version>0.1.0</version>
+    </parent>
     <artifactId>libraries-release-data</artifactId>
     <dependencies>
         <dependency>
