--- a/libraries-release-data/pom.xml
+++ b/libraries-release-data/pom.xml
@@ -24,4 +24,17 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <configuration>
+                    <skip>false</skip>
+                    <mainClass>com.google.cloud.dashboard.GenerateLibrariesList</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
