--- a/libraries-release-data/pom.xml
+++ b/libraries-release-data/pom.xml
@@ -16,6 +16,12 @@
             <version>1.5.13</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
