--- a/tests/validate-bom/action.yml
+++ b/tests/validate-bom/action.yml
@@ -17,16 +17,19 @@ runs:
   - name: Create a canary project that uses the BOM
     shell: bash
     run: |
-      echo "pwd: $(pwd)"
       if [ ! -r "${{ inputs.bom-path }}" ]; then
         echo "The input bom-path ${{ inputs.bom-path }} is not readable"
         exit 1
       fi
       
       bom_absolute_path=$(realpath "${{ inputs.bom-path }}")
+      # Before this "cd", the working directory is the repository that calls
+      # this action. To use validate-bom classes, it needs to change directory
+      # to the directory that defines this action.
       cd ${{ github.action_path }}
-      echo "Running Maven in $(pwd)"
+      echo "Compiling CreateBomCanaryProject.java in $(pwd)"
       mvn -V -ntp compile
+      echo "Running CreateBomCanaryProject with ${bom_absolute_path}"
       mvn -V -ntp -B exec:java -DoutputPath=/tmp/bom-check -DbomPath="${bom_absolute_path}"
   - name: Build the canary project that uses the BOM
     shell: bash
