--- a/.github/workflows/ci-release-note-generation.yaml
+++ b/.github/workflows/ci-release-note-generation.yaml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: zulu
+        distribution: temurin
         java-version: 11
         cache: maven
     - run: java -version
@@ -28,8 +28,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: zulu
+        distribution: temurin
         java-version: 11
+        cache: maven
     - run: java -version
     - name: Dry-run release-note-generation
       shell: bash
