--- a/tests/validate-bom/action.yml
+++ b/tests/validate-bom/action.yml
@@ -28,14 +28,20 @@ runs:
       fi
       
       bom_absolute_path=$(realpath "${{ inputs.bom-path }}")
+
       # Before this "cd", the working directory is the repository that calls
       # this action. To use validate-bom classes, it needs to change directory
       # to the directory that defines this action.
       cd ${{ github.action_path }}
+
       echo "Compiling CreateBomCanaryProject.java in $(pwd)"
       mvn -V -ntp compile
       echo "Running CreateBomCanaryProject with ${bom_absolute_path}"
       mvn -V -ntp -B exec:java -DoutputPath=/tmp/bom-validation -DbomPath="${bom_absolute_path}"
+  - name: Debug print working directory
+    shell: bash
+    run: |
+      echo "working directory: $(pwd)"
   - name: Build the canary project that uses the BOM
     shell: bash
     working-directory: /tmp/bom-validation
