--- a/tests/validate-bom/action.yml
+++ b/tests/validate-bom/action.yml
@@ -52,7 +52,7 @@ runs:
       # This should detect errors that may pass "mvn install". For example:
       # [ERROR] 'dependencies.dependency.groupId' for $com.google.protobuf:protobuf-java:jar with value '$com.google.protobuf' does not match a valid id pattern.
       # https://github.com/googleapis/java-cloud-bom/issues/5936
-      ERROR_MESSAGE=$(mvn dependency:tree -X |grep ERROR)
+      ERROR_MESSAGE=$(mvn dependency:tree -X |grep --quiet ERROR)
       if [ -n "${ERROR_MESSAGE}" ]; then
         echo "${ERROR_MESSAGE}"
         exit 1
