test: BOM validation via dependency tree (#5937)
* bom validation via dependency tree

* test for validate-bom

--- a/tests/validate-bom/action.yml
+++ b/tests/validate-bom/action.yml
@@ -44,4 +44,19 @@ runs:
     run: |
       echo "working directory: $(pwd)"
       mvn -ntp -B install
+  - name: Examine dependency tree for any error
+    shell: bash
+    working-directory: /tmp/bom-validation
+    run: |
+      echo "working directory: $(pwd)"
+      # This dependency tree check can detect errors that pass "mvn install".
+      # For example, an invalid group ID in one of pom.xml files:
+      # [ERROR] 'dependencies.dependency.groupId' for $com.google.protobuf:protobuf-java:jar with value '$com.google.protobuf' does not match a valid id pattern.
+      # https://github.com/googleapis/java-cloud-bom/issues/5936
+      ERROR_MESSAGE=$(mvn dependency:tree -X |grep "ERROR" || true)
+      echo "ERROR_MESSAGE: ${ERROR_MESSAGE}"
+      if [ -n "${ERROR_MESSAGE}" ]; then
+        echo "${ERROR_MESSAGE}"
+        exit 1
+      fi
 
