--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -51,8 +51,7 @@ jobs:
           # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-data
           cache-dependency-path: 'site/package-lock.json'
 
-      - run: cd site && npm ci
-      - run: hugo --minify
+      - run: cd site && npm ci && hugo --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
