--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -58,3 +58,4 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site/public
