--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -12,13 +12,9 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  deployments: write
-  id-token: write
-  contents: write
-  statuses: write
-  actions: write
-  checks: read
+  contents: read
   pages: write
+  id-token: write
 
 # Default to bash
 defaults:
