--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -31,8 +31,6 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
-#    concurrency:
-#      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -45,19 +43,26 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-          # The action defaults to search for the dependency file (package-lock.json,
-          # npm-shrinkwrap.json or yarn.lock) in the repository root, and uses its
-          # hash as a part of the cache key.
-          # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-data
-          cache-dependency-path: 'site/package-lock.json'
+      - name: Setup Pages
+          id: pages
+          uses: actions/configure-pages@v3
+
+      - name: Install Node.js dependencies
+        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+
+#      - name: Setup Node
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: '18'
+#          cache: 'npm'
+#          # The action defaults to search for the dependency file (package-lock.json,
+#          # npm-shrinkwrap.json or yarn.lock) in the repository root, and uses its
+#          # hash as a part of the cache key.
+#          # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-data
+#          cache-dependency-path: 'site/package-lock.json'
 
       - name: Build with Hugo
-        run: cd site && npm ci && hugo --gc --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
+        run: cd site && hugo --gc --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
