--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/configure-pages@v3
 
       - name: Install Node.js dependencies
-        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true && npm install postcss-cli"
 
 #      - name: Setup Node
 #        uses: actions/setup-node@v3
