--- a/site/config.toml
+++ b/site/config.toml
@@ -8,3 +8,5 @@ proxy = "direct"
 path = "github.com/google/docsy"
 [[module.imports]]
 path = "github.com/google/docsy/dependencies"
+
+contentDir = "content/"
