--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Read versions.txt and checkout source repositories
       run: |
-        while read repo tag; do
+        while read repo directory tag; do
           git clone https://github.com/googleapis/${repo}.git
           cd ${repo}
           git checkout ${tag}
@@ -26,11 +26,12 @@ jobs:
 
     - name: Generate Javadocs
       run: |
-        while read repo tag; do
-          cd ${repo}
-          mkdir -p ../site/static/${repo}  # Make sure the output directory exists
-          rm -rf ../site/static/${repo}/*  # Clear any existing files in the output directory
-          mvn javadoc:javadoc -DdestDir=../site/static/${repo}
+        while read repo directory tag; do
+          cd ${directory}
+          mkdir -p ../site/static/${directory}  # Make sure the output directory exists
+          rm -rf ../site/static/${directory}/*  # Clear any existing files in the output directory
+          mvn javadoc:javadoc
+          cp target/site/apidocs/* ../site/static/${directory}
           cd ..
         done <.github/workflows/versions.txt
 
