--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -15,30 +15,42 @@ jobs:
     - name: Checkout this repo
       uses: actions/checkout@v3
 
-    - name: Read versions.txt and checkout source repositories
+    - name: Manual checkout source and javadoc generation for testing purposes
       run: |
-        while read repo directory tag; do
-          git clone https://github.com/googleapis/${repo}.git
-          cd ${repo}
-          git checkout ${tag}
-          cd ..
-        done <.github/workflows/versions.txt
-
-    - name: Generate Javadocs
-      run: |
-        while read repo directory tag; do
-          mkdir -p ../site/static/${directory}  # Make sure the output directory exists
-          rm -rf ../site/static/${directory}/*  # Clear any existing files in the output directory
-          cd ${repo}/${directory}
-          mvn javadoc:javadoc
-          cp target/site/apidocs/* ../../site/static/${directory}
-          cd ..
-        done <.github/workflows/versions.txt
+        git clone https://github.com/googleapis/java-bigquery.git
+        cd java-bigquery
+        git checkout v2.26.0
+        cd ..
+        mkdir -p ../site/static/google-cloud-bigquery  # Make sure the output directory exists
+        rm -rf ../site/static/google-cloud-bigquery/*  # Clear any existing files in the output directory
+        cd $java-bigquery/google-cloud-bigquery
+        mvn javadoc:javadoc
+        cp target/site/apidocs/* ../../site/static/google-cloud-bigquery/
+        cd ..
+#    - name: Read versions.txt and checkout source repositories
+#      run: |
+#        while read repo directory tag; do
+#          git clone https://github.com/googleapis/${repo}.git
+#          cd ${repo}
+#          git checkout ${tag}
+#          cd ..
+#        done <.github/workflows/versions.txt
+#
+#    - name: Generate Javadocs
+#      run: |
+#        while read repo directory tag; do
+#          mkdir -p ../site/static/${directory}  # Make sure the output directory exists
+#          rm -rf ../site/static/${directory}/*  # Clear any existing files in the output directory
+#          cd ${repo}/${directory}
+#          mvn javadoc:javadoc
+#          cp target/site/apidocs/* ../../site/static/${directory}
+#          cd ..
+#        done <.github/workflows/versions.txt
 
     - name: Commit Javadocs
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add --all
-        git commit -m "Add Javadocs" -a || echo "No changes to commit"
+        git commit -m "Add Javadocs for ${repo}" -a || echo "No changes to commit"
         git push
